# lala-bar

./: Cargo.toml  LICENSE  README.md  _typos.toml  meson.build
.github/workflows/: rustci.yml  typos.yml
iced_zbus_notification/: Cargo.toml
iced_zbus_notification/src/: lib.rs
lala_bar/: Cargo.toml  i18n.toml
lala_bar/assets/locales/en-US/: lala-bar.ftl  main.ftl
lala_bar/i18n/en/: lala_bar.ftl
lala_bar/src/: aximer.rs  config.rs  dbusbackend.rs  launcher.rs  localization.rs  localize.rs  main.rs  music_bar.rs  notify.rs  settings.rs  slider.rs  wav_canvars.rs  zbus_mpirs.rs
lala_bar/src/launcher/: applications.rs  systemd.rs
lala_bar/src/wav_canvars/: pipewire.rs
misc/: lala-bar.service.in  lala-musicbar.service.in
notification_iced/: Cargo.toml
notification_iced/src/: lib.rs
src/: aximer.rs  launcher.rs  main.rs  notifications.rs  zbus_mpirs.rs
src/launcher/: applications.rs
zbus_notification/: Cargo.toml  README.md
zbus_notification/src/: lib.rs
