[workspace]
resolver = "2"
members = ["./lala_bar", "./zbus_notification"]

[workspace.package]
version = "0.3.9"
edition = "2021"
authors = ["Decodertalkers <aakari@tutanota.com>"]
license = "MIT"
repository = "https://github.com/Decodetalkers/lala-bar"
readme = "README.md"

[workspace.dependencies]
zbus_notification = { version = "0.3.5", path = "zbus_notification" }
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
url = "2.5.2"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
futures-util = "0.3.30"
