[workspace]
resolver = "2"
members = ["./lala_bar", "./iced_zbus_notification"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Decodertalkers <aakari@tutanota.com>"]
license = "MIT"
repository = "https://github.com/Decodetalkers/lala-bar"
readme = "README.md"

[workspace.dependencies]
iced_zbus_notification = { version = "0.4.0", path = "iced_zbus_notification" }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
url = "2.5.2"
zbus = { version = "5.0.1", default-features = false, features = ["tokio"] }
futures-util = "0.3.30"
async-trait = "0.1.82"
