[workspace]
resolver = "3"
members = ["./lala_bar", "./iced_zbus_notification"]

[workspace.package]
version = "0.4.3"
edition = "2024"
authors = ["Decodertalkers <aakari@tutanota.com>"]
license = "MIT"
repository = "https://github.com/Decodetalkers/lala-bar"
readme = "README.md"

[workspace.dependencies]
iced_zbus_notification = { version = "0.4.3", path = "iced_zbus_notification" }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
url = "2.5.4"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
futures-util = "0.3.31"
async-trait = "0.1.85"
