[package]
name = "lala-bar"
version.workspace = true
edition.workspace = true
description = "a bar on layershell with iced-rs"
authors.workspace = true
license.workspace = true
keywords = ["sway", "waybar"]
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
	"markdown",
], version = "0.14.0" }

iced_layershell = "0.14.0-beta3"

iced_runtime = "0.14.0"
tokio = { version = "1.45", features = ["full"] }
iced_futures = "0.14.0"
env_logger = "0.11.6"
tracing = "0.1.41"

futures-util.workspace = true
serde.workspace = true

zbus.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
	"std",
	"env-filter",
	"fmt",
	"local-time",
] }
anyhow = "1.0.95"
alsa = "0.9.1"

gio = "0.21.1"
regex = "1.11.1"
xdg = "3.0.0"
url.workspace = true
futures.workspace = true
iced_zbus_notification.workspace = true
chrono = "0.4.39"
async-trait.workspace = true
iced_aw = { git = "https://github.com/Decodetalkers/iced_aw", branch = "to_iced14" }
open = "5.3.2"
