[package]
name = "lala-bar"
version = "0.4.3"
edition.workspace = true
description = "a bar on layershell with iced-rs"
authors.workspace = true
license.workspace = true
keywords = ["sway", "waybar"]
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
	"markdown",
], version = "0.14.0" }

iced_layershell = "0.14.2"

iced_runtime = "0.14.0"
tokio = { version = "1.48", features = ["full"] }
iced_futures = "0.14.0"
env_logger = "0.11.6"
tracing = "0.1.41"

futures-util.workspace = true
serde.workspace = true

zbus.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
	"std",
	"env-filter",
	"fmt",
	"local-time",
] }
anyhow = "1.0.95"
alsa = "0.10.0"

gio = "0.21.1"
regex = "1.12.2"
xdg = "3.0.0"
url.workspace = true
futures.workspace = true
iced_zbus_notification.workspace = true
chrono = "0.4.39"
async-trait.workspace = true
iced_aw = "0.13"
open = "5.3.2"
tracing-journald = "0.3.0"
i18n-embed = { version = "0.13.4", features = [
	"fluent-system",
	"desktop-requester",
] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
